cambios en index y se agregó filtros de atributos en categorias